Cambios generales en html y css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li>Live TV</li>
                 <li>Channels</li>
                 <li>Series</li>
-                <li>Informativest</li>
+                <li>Informatives</li>
                 <li>Documentaries</li>
                 <li>Programs</li>
                 <li>Live Radio</li>
@@ -27,7 +27,7 @@
         <section class="container">
             <div class="row">
                 <div class="col">
-                    <p>Transmission Schedule</p>
+                    <p>Broadcast Schedule</p>
                     <ol>
                      <li><a href="#">10:00 Discovery Kids</a></li>
                      <li><a href="#">The Teletubbies</a></li>
@@ -57,7 +57,7 @@
                      <img src="Channels.jpg" alt="Channels">
                      <ol>
                         <li><a href="#">Corporate Information</a></li>
-                        <li><a href="#">General Condition</a></li>
+                        <li><a href="#">Condition</a></li>
                         <li><a href="#">Advertising Management</a></li>
                         <li><a href="#">Cookies</a></li>
                         <li><a href="#">Privacy Polices</a></li>
